--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
-#configuracion de acceso a BD
-spring.jpa.database=POSTGRESQL
+#acceso a base de datos
+spring.jpa.database=postgresql
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
-#estrategia de generacion de base de datos
+#Estrategia de generación de datos
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/tf_web
+spring.datasource.url=jdbc:postgresql://localhost/tf_web_2
 spring.datasource.username=postgres
-spring.datasource.password=1234
-
-#server.port=8081
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+spring.datasource.password=100903_yane
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+server.port=8080
 jwt.secret=4t7w!z%C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$B&E)H@McQfTjW
 
-spring.devtools.restart.log-condition-evaluation-delta=false
